# MLB-Winforecaster

./: .dockerignore  .env.example  .gitignore  Dockerfile  check_kalshi_api.py  check_kalshi_coverage.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: mirror.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v2.1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  (+6 more)
api/: main.py  models.py  spa.py
frontend/: index.html  package-lock.json
nginx/: mlbforecaster.conf
notebooks/: 01_mlb_schedule.ipynb  02_team_batting.ipynb  03_sp_stats.ipynb  04_statcast.ipynb  05_kalshi_ingestion.ipynb  06_team_game_logs.ipynb  07_feature_matrix.ipynb  08_feature_exploration.ipynb  09_model_training.ipynb  10_model_comparison.ipynb  11_kalshi_comparison.ipynb  12_edge_analysis.ipynb  13_v2_feature_analysis.ipynb  14_v2_model_training.ipynb  15_v2_model_comparison.ipynb
portfolio/: astro.config.mjs  package-lock.json  package.json
scripts/: backup_postgres.sh  generate_v2_comparison.py  memory_audit.sh  run_pipeline.py  run_v2_training.py  seed_game_logs.py
tests/: conftest.py  test_artifacts.py  test_backtest.py  test_cache.py  test_edge.py  test_feature_builder.py  test_formulas.py  test_kalshi.py  test_leakage.py  test_mlb_schedule.py  test_models.py  test_shap_analysis.py  test_sp_id_bridge.py  test_sp_recent_form.py  test_sp_stats.py  test_statcast.py  test_team_batting.py  test_v2_backtest.py  test_v2_evaluation.py  test_vif.py
(+308 files in other folders)
